--- a/jkx/.classpath
+++ b/jkx/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="swt.jar"/>
+	<classpathentry kind="lib" path="worldwind.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
